tests/en/errors/pkg_export.salam
// EXPECT: E017
import "math"
func main:
    __ math.sqrt(16.0)
end
